--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+<link rel="stylesheet" type="text/css"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="iresume.css">
     <title>YOGIDESINA|DESINA YOGA DURGA NATH</title>
 </head>
 
@@ -84,73 +86,127 @@
                 <a href="#proj" class="btn btn-secondary btn-lg">My Portfolio</a></center>
         </div>
     </div>
-    <div id="about" class="container card border-info mb-3">
-        <div class="card-header">About Me</div>
-        <div class="card-body text-info">
-            <h5 class="card-title">RESUME</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br></p>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
-                Some quick example text to build on the card title and make up the bulk of the card's content <br>
+    <div id="about">
+       <div class="container" id="container1">
+
+        <div id="picDiv"><img src="profile.png"></div>
+        <div id="contact"><i class="fa fa-envelope-open" aria-hidden="true"></i> yogidesina2@gmail.com<br />
+            <i class="fa fa-mobile" aria-hidden="true"></i> 9440855552<br /><i class="fa fa-globe"
+                aria-hidden="true"></i> yogadurganath.github.io
+        </div>
+
+        <div class="jumbotron" id="cont1"></div>
+    </div>
+    <div class="container" id="container2">
+        <h5>Career objective</h5>
+        <h6>Seeking a position to utilize my skills and abilities in the software industry that offers professional
+            growth while being resourceful and innovative.</h6>
+    </div>
+    <div class="container" id="container3">
+        <h5>Skill-Set</h5>
+        <h6>Java</h6>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
+                aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <h6>Java</h6>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%"
+                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <h6>Java</h6>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
+                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <h6>Java</h6>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
+                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <h6>Java</h6>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
+                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+
+    </div>
+    <div class="container" id="container4">
+        <h5>Education</h5>
+        <div class="table-responsive">
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col"><i class="fa fa-graduation-cap" aria-hidden="true"></i></th>
+                        <th scope="col">School/College</th>
+                        <th scope="col">Year of Passing</th>
+                        <th scope="col">Stream</th>
+                        <th scope="col"><i class="fa fa-percent" aria-hidden="true"></i></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>B.E</td>
+                        <td>SAVEETHA SCHOOL OF ENGINEERING</td>
+                        <td>2019</td>
+                        <td>CSE</td>
+                        <td>78</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>XII</td>
+                        <td>SRI CHAITANYA JR COLLEGE</td>
+                        <td>2015</td>
+                        <td>MPC</td>
+                        <td>82</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>X</td>
+                        <td>SRI CHAITANYA SCHOOL</td>
+                        <td>2013</td>
+                        <td>SSC</td>
+                        <td>82</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-    <h1>Hello, world!</h1>
-    <!-- 
-    ""
-    <>
-    </>
-    <> </>
-    /
-    c
-    C
-    #
-    -->
-    <!--  -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <div class="container" id="container5">
+        <h5>Project Profile</h5>
+        <h6><b>Project #1</b><br />
+            <b>Title</b> :</b> Smart Hybrid Saveetha Utilities Application <br />
+            <b>Duration : </b>Jan 2018 – May 2018<br />
+            <b>Environment : </b>HTML, CSS, JS, JQuery with Framework7, PhoneGap<br />
+            <b> Operating System: </b>Works in Android, IOS, Windows<br />
+            <b> Description:</b>
+            Hybrid platform mobile applications help in cost cutting and saving time as well as providing components for
+            easier development of applications which provide a native feel to the user. This application aims to help
+            developers make the right choice in order to build an application as well as give vital information about
+            hybrid platform mobile application approaches.
+        </h6>
+    </div>
+
+
+
+
+
+    <div class="container" id="container6">
+        <h5> Bio </h5>
+        <h6>DESINA YOGA DURGANATH<BR />
+            08-OCT-1997<BR />
+            MALE<br />
+            SINGLE<br />
+            INDIAN<br />
+            Cooking, Playing badminton, Reading articles.<br />Chennai
+        </h6>
+
+
+    </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
