Navbar Brand is updated with stylish neon css animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         crossorigin="anonymous"> -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="contact.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>YOGIDESINA|DESINA YOGA DURGA NATH</title>
@@ -48,7 +47,11 @@
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">My Portfolio</a>
+        <a class="navbar-brand" href="#"><div class="neon-wrapper">
+            <span class="txt" >Yoga Durganath</span>
+            <span class="gradient"></span>
+            <span class="dodge"></span>
+       </div></a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
