--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,11 @@
         aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
    </button>
-        <a class="navbar-brand" href="#">My Portfolio</a>
+        <a class="navbar-brand" href="#"><div class="neon-wrapper">
+            <span class="txt" >Yoga Durganath</span>
+            <span class="gradient"></span>
+            <span class="dodge"></span>
+       </div></a>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
