--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,11 @@
         aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
    </button>
-        <a class="navbar-brand" href="#">My Portfolio</a>
+        <a class="navbar-brand" href="#"><div class="neon-wrapper">
+            <span class="txt" >Yoga Durganath</span>
+            <span class="gradient"></span>
+            <span class="dodge"></span>
+       </div></a>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -93,6 +97,7 @@
             INDIAN<br />
             Cooking, Playing badminton, Reading articles.<br />Chennai
         </h6>
+        
 
 
 
