Changed intro bg

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,14 +71,14 @@
                     </a>
                 </li>
                 </li>
-                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+                <!-- <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="#feed">
                         <div class="iconContainer">
                             <div class="divTxt">FeedBack</div>
                             <div class="divIcon"><i class="material-icons">face</i></div>
                         </div>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
@@ -110,7 +110,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a title="Twitter" class="social-link rounded-circle text-white mr-3" href="https://twitter.com/YogaDurgaNath1" target="_blank">
+              <a title="Twitter" class="social-link rounded-circle text-white mr-3" href="https://twitter.com/YogaDurgaNath" target="_blank">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
             </li>
