--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <h1>
                 <center>WELCOME TO MY PORTFOLIO.</center>
             </h1><br />
-            <h3 class="text-center">This is my portfolio where I try to showcase my skills and works I have done. I Love coding espically designing and building creative projects and responsive websites.</h3>
-            <center><a href="#about" class="btn btn-secondary btn-lg">About Me</a>
-                <a href="#proj" class="btn btn-secondary btn-lg">My Portfolio</a></center>
+            <h3 class="text-center">This is my portfolio where I try to showcase my skills and works I have done. I Love coding espically designing and building creative projects and responsive websites. I have good knowledge in designing softwares Adobe Photoshop, Adobe Illustrator, Adobe XD.</h3>
+            <center><a href="about.html" class="btn btn-secondary btn-lg">About Me</a>
+                <a href="portfolio.html" class="btn btn-secondary btn-lg">My Portfolio</a></center>
         
     </div>
     <br />
