Made changes in About file

--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
         <h6>Seeking a position to utilize my skills and abilities in the software industry that offers professional
             growth while being resourceful and innovative.</h6>
     </div>
-    <div class="container" id="ResumeContainer3">
-        <h5>Skill-Set</h5>
+    <!-- <div class="container" id="ResumeContainer3">
+        <h5>Skill-Set</h5> -->
 
         <!-- <h6>Java</h6>
         <div class="progress">
@@ -127,7 +127,7 @@
                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
         </div> -->
 
-    </div>
+    <!-- </div> -->
     <div class="container" id="ResumeContainer4">
         <h5>Education</h5>
         <div class="table-responsive">
@@ -205,20 +205,7 @@
 
 
     </div>
-    <div id="about" class="container card border-info mb-3">
-        <div class="card-header">About Me</div>
-        <div class="card-body text-info">
-            <h5 class="card-title">RESUME</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content <br></p>
-                <div>
-                    <div id="dp">
-                        <img class="img-fluid" src="dp.png" alt="Img">
-                    </div>
-                    <h1>Hello, world!</h1>
-                </div>
-        </div>
-    </div>
+    
     
     <footer class="footer text-center">
         <div class="container">
