Removed unwanted content and refined style

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,7 @@
     <button onclick="topFunction()" id="goToTopBtn" title="Go to top"><i class="material-icons iconGoTops">
             arrow_drop_up
         </i></button>
-
-
-
-
-
+<!-- Navbar starts here -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -92,7 +88,7 @@
             </ul>
         </div>
     </nav>
-
+<!-- Navbar ends -->
 
 
 
@@ -100,6 +96,7 @@
 
         <h3 class="text-center">Coding Projects</h3>
         <p>Add Horizontal slider here</p>
+        <!-- Add Slider here with coding links -->
         <h3 class="text-center">Graphics Design Works</h3>
         <div class="row mx-5">
             <div class="col-sm"><a href="#">Workshops/Events</a></div>
