added style to contact form

--- a/contact.html
+++ b/contact.html
@@ -87,55 +87,57 @@
             </ul>
         </div>
     </nav>
-
-    <div id="contact">
-        <div class="card card-outline-secondary">
-            <div class="card-header">
-                <h3 class="mb-0">Contact</h3>
-            </div>
-            <div class="card-body">
+<div class="cont-bg">     
+    
+    <div id="contactbox">
+        <div id="logo">
+            <p>Contact<span>form</span></p>
+        </div>
+        <div id="continput">
+            <div id="input-group">
                 <form class="form" id="contactForm" role="form" autocomplete="off"
-                    action="https://smartforms.dev/submit/5eb86c5d8a02626591cb5ada" method="POST">
-                    <fieldset>
-                        <label for="nameCF" class="mb-0">Name</label>
-                        <div class="row mb-1">
-                            <div class="col-lg-12">
-                                <input type="text" name="name" id="nameCF" class="form-control" required="">
+                        action="https://smartforms.dev/submit/5eb86c5d8a02626591cb5ada" method="POST">
+                        <fieldset>
+                            <label for="nameCF" class="mb-0">Name</label>
+                            <div class="row mb-1">
+                                <div class="col-lg-12">
+                                    <input type="text" name="name" id="nameCF" class="form-control" required="">
+                                </div>
                             </div>
-                        </div>
-                        <label for="emailCF" class="mb-0">Email</label>
-                        <div class="row mb-1">
-                            <div class="col-lg-12">
-                                <input type="email" name="email" id="cemail" class="form-control" required="">
+                            <label for="emailCF" class="mb-0">Email</label>
+                            <div class="row mb-1">
+                                <div class="col-lg-12">
+                                    <input type="email" name="email" id="cemail" class="form-control" required="">
+                                </div>
                             </div>
-                        </div>
-                        <label for="companyCF" class="mb-0">Company</label>
-                        <div class="row mb-1">
-                            <div class="col-lg-12">
-                                <input type="text" name="company" id="companyCF" class="form-control">
+                            <label for="companyCF" class="mb-0">Company</label>
+                            <div class="row mb-1">
+                                <div class="col-lg-12">
+                                    <input type="text" name="company" id="companyCF" class="form-control">
+                                </div>
                             </div>
-                        </div>
-                        <label for="reasonCF" class="mb-0">Reason for Reaching Out.</label>
-                        <div class="row mb-1">
-                            <div class="col-lg-12">
-                                <textarea rows="6" name="reason" id="reasonCF" class="form-control"
-                                    required=""></textarea>
+                            <label for="reasonCF" class="mb-0">Reason for Reaching Out.</label>
+                            <div class="row mb-1">
+                                <div class="col-lg-12">
+                                    <textarea rows="6" name="reason" id="reasonCF" class="form-control"
+                                        required=""></textarea>
+                                </div>
                             </div>
-                        </div>
-                        <label for="messageCF" class="mb-0">Message</label>
-                        <div class="row mb-1">
-                            <div class="col-lg-12">
-                                <textarea rows="6" name="message" id="messageCF" class="form-control"
-                                    required=""></textarea>
+                            <label for="messageCF" class="mb-0">Message</label>
+                            <div class="row mb-1">
+                                <div class="col-lg-12">
+                                    <textarea rows="6" name="message" id="messageCF" class="form-control"
+                                        required=""></textarea>
+                                </div>
                             </div>
-                        </div>
-                        <button class="btn btn-primary" type="submit">Send Message</button>
-                    </fieldset>
-                </form>
+                            <button class="btn btn-primary" type="submit">Send Message</button>
+                        </fieldset>
+                    </form>
             </div>
         </div>
     </div>
-
+         
+</div>
 
     <footer class="footer text-center">
         <div class="container">
