Added Slider in portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="gallery-grid.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="portfolio.css">
 
     <title>YOGIDESINA|DESINA YOGA DURGA NATH</title>
 </head>
@@ -27,10 +26,9 @@
     <button onclick="topFunction()" id="goToTopBtn" title="Go to top"><i class="material-icons iconGoTops">
             arrow_drop_up
         </i></button>
-<!-- Navbar starts here -->
+    <!-- Navbar starts here -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">
@@ -88,16 +86,63 @@
             </ul>
         </div>
     </nav>
-<!-- Navbar ends -->
+    <!-- Navbar ends -->
 
 
 
     <div class="container gallery-container">
 
-        <h3 class="text-center">Coding Projects</h3>
-        <p>Add Horizontal slider here</p>
-        <!-- Add Slider here with coding links -->
-        <h3 class="text-center">Graphics Design Works</h3>
+        <h3 class="text-center my-3 pt-3">Coding Projects</h3>
+        <!-- Slider -->
+        <div class="workslider">
+            <i class="fa fa-chevron-left prev"></i>
+            <i class="fa fa-chevron-right next"></i>
+            <div class="tile-wrapper">
+                <!-- Tiles start here -->
+                <div class="tile">
+                    <img src="Work1.png" alt="" class="slider-img">
+                    <div class="post-info pl-3">
+                        <h5 class="font-weight-bold">Food Catering Website</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                    </div>
+                </div>
+
+                <div class="tile">
+                    <img src="Work1.png" alt="" class="slider-img">
+                    <div class="post-info pl-3">
+                        <h5 class="font-weight-bold">Food Catering Website</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                    </div>
+                </div>
+
+                <div class="tile">
+                    <img src="Work1.png" alt="" class="slider-img">
+                    <div class="post-info pl-3">
+                        <h5 class="font-weight-bold">Food Catering Website</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                    </div>
+                </div>
+
+                <div class="tile">
+                    <img src="Work1.png" alt="" class="slider-img">
+                    <div class="post-info pl-3">
+                        <h5 class="font-weight-bold">Food Catering Website</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
+
+
+        <h3 class="text-center my-3">Graphics Design Works</h3>
         <div class="row mx-5">
             <div class="col-sm"><a href="#">Workshops/Events</a></div>
             <div class="col-sm"><a href="#">Wall posters</a></div>
@@ -171,32 +216,27 @@
         <div class="container">
             <ul class="list-inline mb-5">
                 <li class="list-inline-item">
-                    <a title="Facebook" class="social-link rounded-circle text-white mr-3"
-                        href="https://www.facebook.com/yogidesina" target="_blank">
+                    <a title="Facebook" class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/yogidesina" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Twitter" class="social-link rounded-circle text-white mr-3"
-                        href="https://twitter.com/YogaDurgaNath" target="_blank">
+                    <a title="Twitter" class="social-link rounded-circle text-white mr-3" href="https://twitter.com/YogaDurgaNath" target="_blank">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Github" class="social-link rounded-circle text-white mr-3"
-                        href="https://github.com/yogadurganath/" target="_blank">
+                    <a title="Github" class="social-link rounded-circle text-white mr-3" href="https://github.com/yogadurganath/" target="_blank">
                         <i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="Instagram" class="social-link rounded-circle text-white mr-3"
-                        href="https://www.instagram.com/yogidesina/" target="_blank">
+                    <a title="Instagram" class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/yogidesina/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a title="LinkedIn" class="social-link rounded-circle text-white"
-                        href="https://in.linkedin.com/in/yoga-durga-nath-688a7b141" target="_blank">
+                    <a title="LinkedIn" class="social-link rounded-circle text-white" href="https://in.linkedin.com/in/yoga-durga-nath-688a7b141" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -206,23 +246,17 @@
             <p class="text-muted small mb-0">Copyright &copy; yogadurganath.github.io 2019</p>
         </div>
     </footer>
-    <!--  -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
-    <script>
+    <script src="index.js"></script>
+    <script type="text/javascript">
         baguetteBox.run('.tz-gallery');
     </script>
+
 </body>
 
 </html>
